# fastapi-enterprise-framework-template

./: .gitignore  README.md  app.db  auth_guide.md  authentication_analysis.md  batch_build_index.py  feishu_bot.py  macos 安装 graphrag-more.md  main.py  pyproject.toml  pytest.ini.tmp  swagger_authorize_guide.md  system_architecture.md  test.db  test_logging.py  test_qwen_generator.py
app/api/: __init__.py
app/config/: __init__.py  base.py  database.py  graphrag_config.py  logger.py  settings.py
app/core/: config.py
app/database/: __init__.py  base.py
app/databases/: __init__.py  base.py
app/dependencies/: __init__.py  auth.py  database.py  rate_limit.py  repository.py  service.py
app/events/: base.py
app/exceptions/: __init__.py  custom_exceptions.py  exception_handler.py
app/logger/: logger.py
app/middleware/: __init__.py  authentication.py  cors.py  request_logger.py
app/models/: __init__.py  user.py
app/repositories/: __init__.py  base.py
app/schemas/: __init__.py
app/services/: graphrag_service.py  user_service.py
app/utils/: __init__.py  jwt.py  password.py
design_docs/: fastapi_config_design.md  fastapi_event_dirver_design_3星.md  multi_database_management.md
docs/: RAG知识库架构简要总结.md  RAG知识库设计.md  批量构建索引.md  标准RAG知识库架构设计.md  检索器模块设计.md  集成 graphrag 功能说明.md
docs/design/: architecture_guide.md  architecture_guide1.md  config_module_design.md  fastapi_design.md  fastapi_swagger_ui_认证设计.md  fastapi_异常处理模块设计.md  fastapi路由设计.md  template.md  如何设计和实现一个生产级FastAPI架构.md  架构总览.md  核心模块设计.md
docs/docker/: 1.镜像管理.md  10.常见问题解决方案.md  11.命令速查表.md  12.附录.md  2.容器管理.md  3.网络管理.md  4.数据卷管理.md  5.Docker Compose.md  6.镜像仓库管理.md  7.系统管理.md  8.监控与调试.md  9.最佳实践.md  README.md
docs/docker-optimized/: 1.镜像管理.md  10.1.权限问题.md  10.2.网络问题.md  10.3.存储问题.md  10.4.镜像拉取问题.md  10.常见问题解决方案.md  11.1.常用命令.md  11.2.Docker Compose常用命令.md  11.3.资源清理命令.md  11.命令速查表.md  12.1.Dockerfile示例.md  12.2.docker-compose.yml示例.md  12.3.常用Docker镜像.md  12.附录.md  3.网络管理.md  4.数据卷管理.md  5.Docker Compose.md  6.镜像仓库管理.md  7.系统管理.md  8.1.容器监控.md  8.2.容器调试.md  8.监控与调试.md  9.1.镜像构建最佳实践.md  9.2.容器运行最佳实践.md  9.3.安全最佳实践.md  9.最佳实践.md  README.md
docs/feishu/: note.md  output_K8Xlw8vomiJDu5kzXRocw5menbe.json  sk.md  test.md
docs/implementation/: template.md
docs/mcp_rag_agent_graphrag_demo/: DESIGN_DOC.md  README.md  graphrag_client.py  requirements.txt  集成 graphrag 功能说明.md
docs/prompts/: Openspec.txt  With ollama.txt  备案证审核逻辑结构化需求文档.md  备案证审核逻辑需明确点.txt  测试群组-内部.txt  测试群组-内部2.txt
docs/stocks/: 1.md  2.md  stock_analysis_prompt.md  博通集成_603068_投资分析报告.md  航发动力_600893_投资分析报告.md  航天长峰_600855_投资分析报告.md
docs/uv 管理 python 虚拟环境/: 1. 使用uv管理python虚拟环境.md  2. 使用uv 管理python 虚拟环境[实操].md  uv 完整使用指南.md  (+10 more)
examples/: README.md
performance_test/: health_check_locust.py
scripts/: analyze_project.py  example_script.py  runner.py  test_huawei_obs.py  test_obs_upload.py
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_database_manager.py  test_ddd.py  test_ddd_components.py  test_ddd_standalone.py  test_events.py  test_exception.py  test_graphrag.py  test_health.py  test_user_service.py  test_utils.py
(+338 files in other folders)
