[project]
name = "fastapi-enterprise-template"
version = "0.1.0"
description = "基于FastAPI的企业级架构模板，支持多环境部署、API版本控制和模块化设计"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.125.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "python-jose>=3.5.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.21",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.3.0",
    "slowapi>=0.1.9",
]
[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"  # 指定pip安装时的镜像源，加速依赖下载
extra-index-url = ["https://pypi.org/simple"]  # 添加官方源作为备用

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
