[project]
name = "fastapi-enterprise-template"
version = "0.1.0"
description = "FastAPI enterprise architecture template with multi-environment deployment, API version control and modular design"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.125.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "python-jose>=3.5.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.21",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.3.0",
    "slowapi>=0.1.9",
    "locust>=2.42.6",
    "lark-oapi==1.4.8",
    "llvmlite==0.45.0",
    "graphrag-more==1.2.0",
    "mcp>=1.25.0",
]
[tool.setuptools]
packages = ["app", "scripts"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
extra-index-url = ["https://pypi.org/simple"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
example-script = "scripts.example_script:main"
run-script = "scripts.runner:main"
